--- a/public/content/login.html
+++ b/public/content/login.html
@@ -74,7 +74,7 @@
     <body class="loginPage">
         <div class="loginHeader">
             <div>
-                <img class="chatIcon" src="imgDB/chat_icon.png" />
+                <img class="chatIcon" src="/content/imgDB/chat_icon.png" />
                 <h1>Beacon</h1>
             </div>
         </div>
@@ -204,7 +204,7 @@
                     }
                 },
                 success: function(data){
-                    window.location = '/chatlist.html';
+                    window.location = '/content/chatlist.html';
                 }                
             });
         });
@@ -231,7 +231,7 @@
                     }
                 },
                 success: function(){
-                    window.location = '/chatlist.html';
+                    window.location = '/content/chatlist.html';
                 }
             });
         }
