update server side code

--- a/public/content/chatlist.html
+++ b/public/content/chatlist.html
@@ -142,7 +142,7 @@
             $.ajax
             ({
                 type: "GET",
-                url: "/chat/getChat",
+                url: "/chat/getChatList",
                 dataType: 'json',
                 async: false,
                 headers: {
